# jibaoproxy-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.py  sticky.py
jibaoproxy/: __init__.py  client.py  extract.py  geo.py
tests/: test_client.py
