[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jibaoproxy"
version = "0.1.0"
description = "Official Python SDK for JiBao Proxy — rotating residential, datacenter, mobile, and static proxies"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "JiBao Proxy", email = "support@jibaoproxy.com" }]
keywords = ["proxy", "residential-proxy", "scraping", "rotating-proxy", "socks5", "jibaoproxy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
async = ["httpx>=0.24", "aiohttp>=3.8"]
dev = ["pytest>=7", "ruff>=0.1"]

[project.urls]
Homepage = "https://jibaoproxy.com"
Repository = "https://github.com/jibaoproxyofficial-pixel/jibaoproxy-python"
Issues = "https://github.com/jibaoproxyofficial-pixel/jibaoproxy-python/issues"

[tool.setuptools.packages.find]
include = ["jibaoproxy*"]
